# sanup

./: .gitignore  Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  logger.rs  main.rs
src/app/: compression_kind.rs  compression_level.rs  focus.rs  hash_algorithm.rs  log_level.rs  mod.rs  sanup.rs  settings.rs  state.rs  theme.rs  watched_disk.rs
src/backup/: destination.rs  disk.rs  filter.rs  kind.rs  metadata.rs  mod.rs  source.rs  status.rs  task.rs  worker.rs
src/db/: manager.rs
src/sanup/: focus.rs  message.rs  mod.rs  state.rs  tabs.rs
src/ui/: inputfield.rs  inputfieldtype.rs  inputform.rs  mod.rs  stringfield.rs
src/ui/input/: boolfield.rs  enumfield.rs  enumvariants.rs  field.rs  floatfield.rs  inputfield.rs  inputfieldtype.rs  inputform.rs  inputlist.rs  integerfield.rs  mod.rs  stringfield.rs  value.rs
