[package]
name = "sanup"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
nix = { version = "0.30.1", features = ["fs"] }
log = "0.4.28"
fern = { version = "0.7.1", features = ["colored"] }
colored = "3.0.0"
chrono = "0.4.38"
mongodb = "3.2.4"
serde = { version = "1.0.213", features = ["derive"] }
toml = "0.8.19"
uuid = { version = "1.11.0", features = ["v4"] }
